<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/scorecard_logo" />

    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_results" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewUserNameResultList"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_username"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_win_points_short"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_drawn_points_short"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_loss_points_short"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_diff"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_points"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonAddResult"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/appCompatButtonShowScoreList"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_add_result" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonShowScoreList"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_show_scorelist" />


    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>
