<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/scorecard_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hello" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewUserName"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/appCompatButtonUserList"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/text_show_userlist" />

            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/appCompatButtonAddGame"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/text_init_game" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_scores" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_scorename"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_typ"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_mode"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_num_users"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_last_update"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewScores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="80dp"
            android:layout_marginTop="50dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonCreateScoreList"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_create_score" />


    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>
