<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/scorecard_logo" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/text_games" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/colorTextHint">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/hint_gamename" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/hint_win_points" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/hint_loss_points" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/hint_drawn_points" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp" />

        <android.support.v7.widget.AppCompatButton
            style="@style/buttonStyle"
            android:id="@+id/appCompatButtonCreateGame"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_create_game_short" />

    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>