<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewScoreName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_scorename"
                android:layout_weight="1"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewScoreTyp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_typ"
                android:layout_weight="1"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewScoreMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_mode"
                android:layout_weight="1"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLastUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_last_update"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>