<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.CreateGameActivity">

    <android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/scorecard_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_gamename"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_number_of"
                android:layout_marginTop="20dp"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:text="@string/text_win_points"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:text="@string/text_loss_points"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_drawn_points"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <NumberPicker
                    android:id="@+id/numberPickerWinPoints"
                    android:layout_width="30dp"
                    android:layout_height="130dp"
                    android:layout_marginRight="70dp"/>

                <NumberPicker
                    android:id="@+id/numberPickerLossPoints"
                    android:layout_width="30dp"
                    android:layout_height="130dp"
                    android:layout_marginRight="70dp"/>

                <NumberPicker
                    android:id="@+id/numberPickerDrawnPoints"
                    android:layout_width="30dp"
                    android:layout_height="130dp"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/appCompatButtonGameList"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_create_game" />

        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>